# kapa-mcp-agent

./: .gitignore  README.md
.github/workflows/: release.yml
docs/: calibration-runbook.md  capability-probe.md  exe-build-and-install.md  feedback-loop.md  google-drive-ingest.md  implementation-options-matrix.md  install-guide-ko.md  prd.md  program-notes.md  project-brief-ko.md  public-image-inventory.md  remote-update.md  spec.md  tailscale-deployment.md  target-research-dossier.md  tdd.md  test-plan.md  tooling-and-skills-research.md  vmware-dev-plan.md  windows-validation-checklist.md
mcp-server/: README.md  pyproject.toml
mcp-server/kapa_mcp/: agent_client.py  server.py
recipes/: example.notepad_copy_all.json  example.notepad_echo.json  kapa_hub_plus.search_address.template.json
tools/: agent_smoke.py  calibrate_agent.py  field_recon.py  ingest_server.py  protected_capture_test_app.py
windows-agent/: README.md  config.example.json  probe.config.example.json  pyproject.toml  run_agent.py  run_probe.py  run_watchdog.py
windows-agent/kapa_agent/: capability_probe.py  config.py  file_collector.py  main.py  models.py  screen_capture.py  storage.py  updater.py  windows_automation.py
windows-agent/scripts/: build-exe.ps1  build-probe-exe.ps1  install-agent.ps1  install-exe-agent.ps1  install-probe-deps.ps1  install.ps1  run-agent-exe.ps1  run-agent.ps1  run-probe-exe.ps1  run-probe.ps1  smoke-test.ps1  uninstall-agent.ps1
