[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kapa-windows-agent"
version = "0.1.0"
description = "Tailscale-private Windows desktop automation agent for KAPA/KAIS workflows"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pywinauto>=0.6.8; platform_system == 'Windows'",
  "pyperclip>=1.8",
  "watchdog>=4.0",
  "psutil>=5.9",
  "mss>=9.0",
]

[project.scripts]
kapa-agent = "kapa_agent.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["kapa_agent*"]
